--- a/src/app/material-categories/lazy/material-сategory-list-page/material-сategory-list-page.component.html
+++ b/src/app/material-categories/lazy/material-сategory-list-page/material-сategory-list-page.component.html
@@ -1,13 +1,13 @@
-﻿<ng-container *ngIf="{ isEditor: isEditor$ | async } as data">
+﻿<ng-container *ngIf="{ isEditor: isEditor$ | async, categories: categories$ | async } as data">
     <a *ngIf="data.isEditor" [routerLink]="[0, 'edit']">Создать категорию</a>
-    <ul *ngFor="let category of items; let i = index;">
+    <ul *ngFor="let category of data.categories;">
         <li *ngIf="data.isEditor || category.itemsCount != 0">
             <a [routerLink]="[+category.materialType === 1 ? '/news' : '/blogs']" [queryParams]="{page: 1, categoryId: category.id}">
                 <span [textContent]="category.name"></span> [<span [textContent]="category.itemsCount"></span>]
             </a>
             <span *ngIf="data.isEditor">
                 <a [routerLink]="[category.id, 'edit']"> <i class="material-icons">edit</i></a>
-                <a *ngIf="category.itemsCount == 0" (click)="delete(i)"> <i class="material-icons">clear</i></a>
+                <a *ngIf="category.itemsCount == 0" (click)="onShowDeleteModal(category.id)"> <i class="material-icons">clear</i></a>
             </span>
         </li>
     </ul>
