--- a/src/app/layout/modules/mobile-layout/match-header/match-header.component.html
+++ b/src/app/layout/modules/mobile-layout/match-header/match-header.component.html
@@ -6,7 +6,7 @@
         <div class="flex-space-between full-width">
             <div class="">
                 <div class="full-width text-center">
-                    <img [src]="data.match.homeClubLogo" [alt]="data.match.homeClubName" [title]="data.match.homeClubName" />
+                    <img [src]="data.match.homeClubLogo" [alt]="data.match.homeClubName" [title]="data.match.homeClubName" class="logo" />
                 </div>
                 <div class="club-name full-width text-center">
                     <b [textContent]="data.match.homeClubName"></b>
