--- a/src/app/lazy-modules/sidebar-left/components/match-calendar-entry/match-calendar-entry.component.html
+++ b/src/app/lazy-modules/sidebar-left/components/match-calendar-entry/match-calendar-entry.component.html
@@ -12,7 +12,7 @@
 
     <div class="full-width flex-space-around flex-v-c">
         <div class="text-center">
-            <img [src]="match.homeClubLogo" class="center" [alt]="match.homeClubName" [title]="match.homeClubName">
+            <img [src]="match.homeClubLogo" class="logo" [alt]="match.homeClubName" [title]="match.homeClubName">
             <strong class="clubName" [textContent]="match.homeClubName"></strong>
         </div>
         <div class="padding0 text-center">
@@ -30,7 +30,7 @@
             </a>
         </div>
         <div class="text-center">
-            <img [src]="match.awayClubLogo" class="center" [alt]="match.awayClubName" [title]="match.awayClubName">
+            <img [src]="match.awayClubLogo" class="logo" [alt]="match.awayClubName" [title]="match.awayClubName">
             <strong class="clubName" [textContent]="match.awayClubName"></strong>
         </div>
     </div>
