--- a/src/app/materials/core/material-item/material-item.component.scss
+++ b/src/app/materials/core/material-item/material-item.component.scss
@@ -3,6 +3,8 @@
     max-width: 100%;
     line-height: 1.42857143;
     background-color: #fff;
+    height: 140px;
+    width: 300px;
 }
 
 @media (max-width: 340px) {
