--- a/src/app/lazy-modules/sidebar-left/components/injury-current-list/injury-current-list.component.scss
+++ b/src/app/lazy-modules/sidebar-left/components/injury-current-list/injury-current-list.component.scss
@@ -2,14 +2,15 @@
     background-color: darkgray;
     padding: 0 5px;
     width: 100%;
-}    
+}
 
-    .injury-item {
-        border-left: maroon solid 3px;
-        margin-bottom: 5px;
-        width: 100%;
-    }
+.injury-item {
+    border-left: maroon solid 3px;
+    margin-bottom: 5px;
+    width: 100%;
+}
 
-    .injury-item img {
-        max-width: 40px;
-    }
+.photo {
+    height: 50px;
+    width: 50px;
+}
