Switched font from 10427 to notoserif. Simplified styles in material item page.

--- a/src/app/home/navbar/components/navbar.component.scss
+++ b/src/app/home/navbar/components/navbar.component.scss
@@ -82,6 +82,7 @@ nav {
 }
 
 .od {
+    margin-left: auto;
     height: 90px;
-    width: calc(100% - 310px - 654px);
+    width: calc(100% - 272px - 750px);
 }
