--- a/src/fonts/iconfont/material-icons.css
+++ b/src/fonts/iconfont/material-icons.css
@@ -25,5 +25,6 @@
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-feature-settings: 'liga';
   font-feature-settings: 'liga';
 }
