--- a/src/styles.scss
+++ b/src/styles.scss
@@ -196,8 +196,8 @@ ol {
 @font-face {
     font-display: swap;
     font-family: "Beauty";
-    src: url('./fonts/10427.woff2') format('woff2'),
-         url('./fonts/10427.woff') format('woff');
+    src: url('./fonts/notoserif-onlyusedglyphs-webfont.woff2') format('woff2'),
+    url('./fonts/notoserif-onlyusedglyphs-webfont.woff') format('woff');
 }
 
 /* The emerging W3C standard
