--- a/src/app/home/navbar/components/navbar.component.html
+++ b/src/app/home/navbar/components/navbar.component.html
@@ -6,13 +6,12 @@
         <a class="logo-link" role="button" [routerLink]="['/']">
             <img src="/content/logo34.png" class="logo" alt="MyLFC.ru" />
         </a>
-        <!-- <navbar-menu class="flex-space-around header-nav"></navbar-menu> -->
         <app-dynamic-content-outlet *ngIf="!data.mobile" [componentName]="'NavbarMenuComponent'">
         </app-dynamic-content-outlet>
         <ng-container *ngIf="data.mobile">
             <ng-container *ngIf="!data.userId;else logined" class="profile-btns">
                 <a [routerLink]="['/account/signin']" mat-button>
-                    <mat-icon>person</mat-icon>
+                    Войти
                 </a>
             </ng-container>
             <ng-template #logined>
