--- a/src/app/materials/core/material-item/material-item.component.scss
+++ b/src/app/materials/core/material-item/material-item.component.scss
@@ -79,6 +79,7 @@
 .material {
     border-left: 5px solid #731010;
     display: flex;
+    height: 100%;
     flex-direction: column;
     flex-flow: row wrap;
     justify-content: center;
