--- a/src/app/home/navbar/components/navbar.component.html
+++ b/src/app/home/navbar/components/navbar.component.html
@@ -19,8 +19,8 @@
                     <a role="button" [routerLink]="['/users', data.userId]">
                         <mat-icon>person</mat-icon>
                     </a>
-                    <pm-counter class="a"></pm-counter>
-                    <notification-counter></notification-counter>
+                    <app-dynamic-content-outlet [componentName]="'CountersComponent'" class="counters">
+                    </app-dynamic-content-outlet>
                 </div>
             </ng-template>
         </ng-container>
