--- a/src/app/chat/maxiChat/maxiChat.component.html
+++ b/src/app/chat/maxiChat/maxiChat.component.html
@@ -1,17 +1,36 @@
-﻿<div class="block-minichat">
+﻿<ng-container *ngIf="{ isLogined: isLogined$ | async, isModerator: isModerator$ | async, userId: userId$ | async,
+    miniMessages: miniMessages$ | async,
+    maxiMessages: maxiMessages$ | async } as data">
+<div class="block-minichat">
     <div class="blocktitle text-center">
         <b></b>
     </div>
 </div>
 <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Мини-чат">
-        <ng-template matTabContent>
-            <chat-window [type]="0" [height]="500"></chat-window>
-        </ng-template>
-    </mat-tab>
     <mat-tab label="Макси-чат(флудилка)">
         <ng-template matTabContent>
-            <chat-window [type]="3" [height]="500"></chat-window>
+            <chat-window [type]="3" [height]="500"
+                [isLogined]="data.isLogined"
+                [isModerator]="data.isModerator"
+                [userId]="data.userId"
+                [messages]="data.maxiMessages"
+                (createMessage)="onCreateMessage($event)"
+                (updateMessage)="onUpdateMessage($event)"
+                (deleteMessage)="onDeleteMessage($event)"
+            ></chat-window>
+        </ng-template>
+    </mat-tab>
+    <mat-tab label="Мини-чат">
+        <ng-template matTabContent>
+            <chat-window [type]="0" [height]="500"
+                [isLogined]="data.isLogined"
+                [isModerator]="data.isModerator"
+                [userId]="data.userId"
+                [messages]="data.miniMessages"
+                (createMessage)="onCreateMessage($event)"
+                (updateMessage)="onUpdateMessage($event)"
+                (deleteMessage)="onDeleteMessage($event)"></chat-window>
         </ng-template>
     </mat-tab>
 </mat-tab-group>
+</ng-container>
