Added using store for last comments.

--- a/src/app/lazy-modules/sidebar-right/components/sidebar-right/sidebar-right.component.html
+++ b/src/app/lazy-modules/sidebar-right/components/sidebar-right/sidebar-right.component.html
@@ -1,4 +1,4 @@
-﻿<ng-container *ngIf="{ userId: userId$ | async } as data">
+﻿<ng-container *ngIf="{ userId: userId$ | async, latestComments: latestComments$ | async } as data">
     <ul class="maroon-panel login-list-panel padding10">
         <li *ngIf="!data.userId;else logined">
             <account-signin-widget></account-signin-widget>
@@ -31,6 +31,6 @@
     <section class="full-width top10">
         <user-birthday></user-birthday>
     </section>
-    <comment-last></comment-last>
+    <comment-last [comments]="data.latestComments"></comment-last>
     <a mat-raised-button class="full-width color-back-gold" [routerLink]="['/job']"><b>Вакансии</b></a>
 </ng-container>
