--- a/src/app/lazy-modules/sidebar-right/components/comment-last/comment-last.component.html
+++ b/src/app/lazy-modules/sidebar-right/components/comment-last/comment-last.component.html
@@ -1,6 +1,6 @@
 ﻿<section class="flex comments">
     Последние комментарии:
-    <div *ngFor="let item of items; let i = index;" class="full-width">
+    <div *ngFor="let item of comments; let i = index;" class="full-width">
         <a [textContent]="item.authorUserName"
            [routerLink]="['/users', item.authorId]"
            class="color-gold"></a>: <a [routerLink]="['/', item.typeName, item.materialId || item.matchId]"
