--- a/src/app/lazy-modules/sidebar-right/components/user-online-counter/user-online-counter.component.html
+++ b/src/app/lazy-modules/sidebar-right/components/user-online-counter/user-online-counter.component.html
@@ -1,6 +1,6 @@
-﻿<div class="text-white">
-    <div>Посетителей всего: <span [textContent]="allCount" class="text-yellow"></span> / Гостей: <span [textContent]="guestCount" class="text-yellow"></span></div>
-    <div *ngIf="users?.length > 0">Пользователи: <span *ngFor="let user of users; let i = index; let last = last">
+﻿<div class="text-white" *ngIf="usersOnline">
+    <div>Посетителей всего: <span [textContent]="usersOnline.allCount" class="text-yellow"></span> / Гостей: <span [textContent]="usersOnline.guestCount" class="text-yellow"></span></div>
+    <div *ngIf="usersOnline.users?.length > 0">Пользователи: <span *ngFor="let user of usersOnline.users; let i = index; let last = last">
         <a role="button" [routerLink]="['/users', user.id]" class="text-yellow" [textContent]="user.userName"></a><span *ngIf="!last">, </span></span>
     </div>
 </div>
