Returned next match to calendar

--- a/src/app/lazy-modules/sidebar-left/components/match-calendar/match-calendar.component.html
+++ b/src/app/lazy-modules/sidebar-left/components/match-calendar/match-calendar.component.html
@@ -1,7 +1,7 @@
 ﻿<section class="flex">
-    <!-- <div class="flex next match-calendar" *ngIf="next">
+    <div class="flex next match-calendar" *ngIf="next">
         <match-calendar-entry class="full-width" [match]="next" name="Следующая игра" [next]="true"></match-calendar-entry>
-    </div> -->
+    </div>
     <div class="last flex match-calendar" *ngIf="last">
         <match-calendar-entry class="full-width" [match]="last" name="Предыдущая игра" [next]="false"></match-calendar-entry>
     </div>
