--- a/src/app/comments/shared/comment-section/comment-section.component.html
+++ b/src/app/comments/shared/comment-section/comment-section.component.html
@@ -1,14 +1,14 @@
-﻿<ng-container *ngIf="{ isLogined: isLogined$ | async } as data">
+﻿<ng-container *ngIf="{ isLogined: isLogined$ | async, comments: comments$ | async } as data">
     <od [blockName]="'R-A-255349-2'"></od>
 
     <div id="comments" class="flex-v-c">
-        Комментарии: <span [textContent]="totalItems"></span>&nbsp;
+        Комментарии: <span [textContent]="data.comments.length"></span>&nbsp;
         <a (click)="update()" role="button">
             <mat-icon>refresh</mat-icon>
         </a>
     </div>
 
-    <div *ngFor="let comment of items; trackBy: trackByFn">
+    <div *ngFor="let comment of data.comments; trackBy: trackByFn">
         <comment-detail [item]="comment" [deep]="0" [materialId]="materialId" [canCommentary]="canCommentary"
             [type]="type" [matchId]="matchId"></comment-detail>
     </div>
