Fixed issue, when can't update person without update photo.

--- a/src/app/materials/core/material-home/material-home.component.scss
+++ b/src/app/materials/core/material-home/material-home.component.scss
@@ -1,7 +1,9 @@
-﻿.material-container {
+﻿hen .material-container {    
     max-width:250px;
     margin-bottom: 5px;
     width: 100%;
+    content-visibility: auto;
+    contain-intrinsic-size: 360px; 
 }
 
 @media (min-width: 768px) and (max-width: 1056px), (max-width: 536px) {
