--- a/src/app/match-persons/components/matchPerson-panel/matchPerson-panel.component.html
+++ b/src/app/match-persons/components/matchPerson-panel/matchPerson-panel.component.html
@@ -1,5 +1,5 @@
 ﻿<ng-container *ngIf="{ isInformer: isInformer$ | async, persons: matchPersons$ | async,
-    editOptions: editOptions$ | async } as data">
+    editOptions: editOptions$ | async, selected: selected$ | async } as data">
     <div class="full-width flex" *ngIf="data.persons">
         <div class="full-width text-center">
             Главный судья:
@@ -175,6 +175,7 @@
             <div class="full-width top20">
                 <match-person-edit-panel [matchId]="matchId"
                     [editOptions]="data.editOptions"
+                    [selected]="data.selected"
                     [isHome]="isHome"
                     (create)="onCreate($event)">
                 </match-person-edit-panel>
