--- a/src/app/match-persons/components/matchPerson-panel/matchPerson-panel.component.html
+++ b/src/app/match-persons/components/matchPerson-panel/matchPerson-panel.component.html
@@ -13,7 +13,7 @@
             </span>
         </div>
         <div class="full-width text-center">
-            Помощники судьи: <span *ngFor="let ref of data.persons[mpType.SubReferee]; let last = last; trackBy: trackByFn">
+            Боковые судьи: <span *ngFor="let ref of data.persons[mpType.SubReferee]; let last = last; trackBy: trackByFn">
                 <match-person-info [person]="ref" [isHome]="isHome" [isPlayer]="false" [matchId]="matchId"
                     (selected)="onSelectPerson($event)" (delete)="onDelete($event)"></match-person-info>
                 <span *ngIf="!last">, </span>
@@ -24,7 +24,7 @@
             </span>
         </div>
         <div class="full-width text-center" *ngIf="data.persons[mpType.AdditionalReferee]?.length > 0 || data.isInformer">
-            Дополнительные судьи: <span *ngFor="let ref of data.persons[mpType.AdditionalReferee]; let last=last; trackBy: trackByFn;">
+            Судьи ВАР: <span *ngFor="let ref of data.persons[mpType.AdditionalReferee]; let last=last; trackBy: trackByFn;">
                 <match-person-info [person]="ref" [isHome]="isHome" [isPlayer]="false" [matchId]="matchId"
                     (selected)="onSelectPerson($event)" (delete)="onDelete($event)"></match-person-info>
                 <span *ngIf="!last">, </span>
