Improved match calendar entry layout.

--- a/src/app/lazy-modules/match-header/components/match-header.component.html
+++ b/src/app/lazy-modules/match-header/components/match-header.component.html
@@ -21,7 +21,7 @@
             </div>
             <div class="">
                 <div class="full-width text-center">
-                    <img [src]="data.match.awayClubLogo" [alt]="data.match.awayClubName" [title]="data.match.awayClubName" />
+                    <img [src]="data.match.awayClubLogo" [alt]="data.match.awayClubName" [title]="data.match.awayClubName" class="logo" />
                 </div>
                 <div class="club-name full-width text-center">
                     <b [textContent]="data.match.awayClubName"></b>
