--- a/src/app/lazy-modules/sidebar-left/components/match-calendar-entry/match-calendar-entry.component.html
+++ b/src/app/lazy-modules/sidebar-left/components/match-calendar-entry/match-calendar-entry.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="full-width flex-space-around flex-v-c">
-        <div class="text-center">
+        <div class="club-info">
             <img [src]="match.homeClubLogo" class="logo" [alt]="match.homeClubName" [title]="match.homeClubName">
             <strong class="clubName" [textContent]="match.homeClubName"></strong>
         </div>
@@ -29,7 +29,7 @@
                 </ng-template>
             </a>
         </div>
-        <div class="text-center">
+        <div class="club-info">
             <img [src]="match.awayClubLogo" class="logo" [alt]="match.awayClubName" [title]="match.awayClubName">
             <strong class="clubName" [textContent]="match.awayClubName"></strong>
         </div>
