--- a/src/app/widgets/http/account-signin-widget/account-signin-widget.component.html
+++ b/src/app/widgets/http/account-signin-widget/account-signin-widget.component.html
@@ -1,9 +1,9 @@
 ﻿<form class="top10" role="form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="full-width">
-        <input class="form-control" formControlName="username" placeholder="Логин" type="text" />
+        <input class="form-control" formControlName="username" placeholder="Логин" type="text" autocomplete="username"/>
       </div>
     <div class="full-width top10">
-        <input class="form-control" formControlName="password" placeholder="Пароль" type="password" />
+        <input class="form-control" formControlName="password" placeholder="Пароль" type="password" autocomplete="current-password"/>
     </div>
     <div class="flex-space-around flex-v-c top10">
         <span>
